force-app/main/default/objects/Staging_Product__c/fields/Purchasing_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Price__c</fullName>
    <description>Price paid by Picnic to suppliers</description>
    <label>Purchasing Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>