force-app/main/default/objects/Staging_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GTIN__c</columns>
    <columns>Purchasing_Price__c</columns>
    <columns>Selling_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>